# BMSTU_cg_course

./: .gitignore  CMakeLists.txt
docs/: 03-introduction.aux  03-introduction.tex  04-analysis.aux  04-analysis.tex  05-design.aux  05-design.tex  06-implementation.aux  06-implementation.tex  07-research.aux  07-research.tex  08-conclusion.aux  08-conclusion.tex  09-appendix.aux  biblio.bib  coursework.aux  coursework.bbl  coursework.bcf  coursework.bcf-SAVE-ERROR  coursework.blg  coursework.fdb_latexmk  coursework.fls  coursework.out  coursework.tex  coursework.toc
inc/BasicGraphic/: Plane.h  Plane.hpp  Point.h  Point.hpp  Vector.h  Vector.hpp
inc/Canvas/: Canvas.h  Canvas.hpp
inc/CommandClasses/: BaseCommand.h
inc/CommandClasses/Object/: Load.h  Load.hpp  Transform.h  Transform.hpp
inc/CommandClasses/Scene/: Interaction.h  Interaction.hpp  Transform.h  Transform.hpp
inc/Drawer/: DrawVisitor.h  DrawVisitor.hpp  Drawer.h  Drawer.hpp  LightCaster.h  LightCaster.hpp  Slope.h  Slope.hpp  ZMapper.h  ZMapper.hpp
inc/Drawer/lights/: LightCaster.h  LightCaster.hpp  ZMapper.h  ZMapper.hpp
inc/Drawer/nolights/: DrawVisitor.hpp
inc/Drawer/normalzbuffer/: NewDrawVisitor.h  NewDrawVisitor.hpp
inc/Engine/: GraphicsEngine.h
inc/Loader/: Loader.h  Loader.hpp
inc/Loader/Builders/: AbstractSurfaceBuilder.h  BaseDirector.h  DirectorCreator.h  SurfaceBuilder.h  SurfaceBuilder.hpp  SurfaceDirector.h  SurfaceDirector.hpp
inc/Loader/Readers/: AbstractFacetReader.h  TXTFacetReader.h  TXTFacetReader.hpp  UncoloredTXTFacetReader.h  UncoloredTXTFacetReader.hpp
inc/Managers/: BaseManager.h  Buffer.inl  DrawManager.h  DrawManager.hpp  Facade.h  Facade.hpp  InteractionManager.h  InteractionManager.hpp  LoadManager.h  LoadManager.hpp  SceneManager.h  SceneManager.hpp  TransformManager.h  TransformManager.hpp
inc/Managers/Map/: Map.h  Map.hpp
inc/Objects/: AbstractObject.h  AbstractObject.hpp  Camera.h  Camera.hpp  Color.h  CompositeObject.h  CompositeObject.hpp  Drawable.h  Light.h  Light.hpp  Model.h  Model.hpp
inc/Objects/ModelType/: AbstractSurfaceModel.h  Facet.h  Facet.hpp  SurfaceModel.h  SurfaceModel.hpp
inc/Scene/: Scene.h  Scene.hpp
inc/UserInterface/: Application.h  Application.hpp  ImguiInterface.h  ImguiInterface.hpp  Window.h  Window.hpp
inc/UserInterface/CodeFragments/: InputSDL.hh  imgui_drawmapoverlay.hh  imgui_drawmenu.hh  imgui_drawoverlay.hh  imgui_list_interaction_popup.hh  imgui_modelbrowser.hh
inc/Visitor/: AbstractVisitor.h  MoveVisitor.h  MoveVisitor.hpp  RotateVisitor.h  RotateVisitor.hpp  ScaleVisitor.h  ScaleVisitor.hpp  TransformVisitor.h
model_library/: bluecube1x1.model  cube1x1.model  dom1.model  flat.model  glass_dom1.model  glass_level.model  glass_row.model  greencube1x1.model  redcube1x1.model  steelcube1x1.model  yellowcube1x1.model
models/: 1-small_building.txt  2-medium_building.txt  3-big_building.txt  4-fuelstation.txt  5-svetofor.txt  composite_dom1.txt  composite_dom2.txt  scene.txt  test.txt  test1.txt
python/: main.py
scenes/: fuelstationtest.scene  inputfilename.scene  kkk.scene  scene.scene  scene.txt  test.scene
src/: main.cpp
tmpscenese/: composite.txt  light.txt
